<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:layout_margin="10dp"
    android:gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_img"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_profile"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_below="@id/user_img"
        android:layout_marginTop="20dp"
        android:id="@+id/editBox"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/usernamebox"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_profile"
                android:layout_marginRight="20dp"/>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColor="@color/black"
                    android:id="@+id/username"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:textColor="@color/black"
                    android:id="@+id/fullname"/>



            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@id/usernamebox"
            android:id="@+id/emailbox"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_email"
                android:layout_marginRight="20dp"/>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email"/>



            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@id/emailbox"
            android:id="@+id/websitebox"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_web"
                android:layout_marginRight="20dp"/>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website"
                    android:textColor="@color/black"
                    android:id="@+id/website"/>



            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/websitebox"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:id="@+id/bio_box"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_bio"
                android:layout_marginRight="20dp"/>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/bio"
                    android:textColor="@color/black"
                    android:lines="3"
                    android:id="@+id/bio"
                    android:gravity="top"
                    />



            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@id/bio_box"
            android:id="@+id/passwordbox"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_lock_outline_black_24dp"
                android:layout_marginRight="20dp"/>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/black"
                    android:id="@+id/password"
                    android:inputType="textPassword"/>



            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit" />


        </LinearLayout>






    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editBox"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_btn"
        android:layout_margin="10dp"
        android:text="@string/register"
         />



</RelativeLayout>